# linkedin-outreach-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample_config.yaml  sample_pipeline.json  sample_profile.yaml
src/linkedin_outreach_mcp/: __init__.py  __main__.py  browser.py  config.py  personalize.py  pipeline.py  search.py  server.py
